<resources>
    <string name="app_name">FileExplorer</string>

    <string name="nav_menu_download">Download</string>
    <string name="nav_menu_picture">Picture</string>
    <string name="nav_menu_video">Video</string>
    <string name="nav_menu_audio">Audio</string>
    <string name="nav_menu_setting">Setting</string>
    <string name="menu_layout">layout</string>
    <string name="menu_popup_menu">popup</string>
    <string name="menu_sort_by_name">Sort by Name</string>
    <string name="menu_sort_by_date">Sort by Date</string>
    <string name="menu_search">Search</string>
    <string name="error_msg_sdcard">Do you have your SD card? Cannot access your SD card.</string>


    <string name="permission_storage_denied">Storage access permissions were denied. Please consider granting it in order to access your data!</string>
    <string name="permission_storage_never_ask_again">Storage access permissions were denied with never ask again.</string>
    <string name="no_files">No files</string>

</resources>
